# line_descriptor_opencvm_demo

./: CMakeLists.txt  README.MD  main.cpp
